securitygroup.tf
# Create the Security Group
resource "aws_security_group" "cpwi-sg" {
  vpc_id       = "${aws_vpc.cpwi_vpc.id}"
  name         = "CPWI Security Group"
  description  = "CPWI Security Group"
  
  # allow ingress of port 22
  ingress {
    cidr_blocks = var.ingressCIDRblock  
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = var.ingressCIDRblock
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  ingress {
    cidr_blocks = var.ingressCIDRblock
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  
  # allow egress of all ports
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

 tags = {
   Name = "CPWI Security Group"
   Description = "CPWI Security Group"
}
}
